<resources>
    <string name="app_name">Ozogram</string>

    <string name="app_font_bold">urfa_bold.otf</string>
    <string name="app_font_sim_bold">urfa_sim_bold.otf</string>
    <string name="app_font_bold_italic">urfa_bold_italic.otf</string>
    <string name="app_font_regular">urfa_regular_1.otf</string>
    <string name="app_font_thin">urfa_regular_italic.otf</string>

    <string name="member_s_login">MEMBER\'S LOGIN</string>
    <string name="username_e_mail">Username / E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_sign_up">New User? <font fgcolor="#CD7F0C">Sign Up</font></string>
    <string name="postGalleryPaths">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="story_highlights">Story Highlights</string>
    <string name="keep_your_favourite_stories_on_your_profile">keep your favourite stories on your profile</string>
    <string name="txt_new">New</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="_3_of_4_complete">3 of 4 COMPLETE</string>
    <string name="add_bio">Add Bio</string>
    <string name="add_your_name">Add Your Name</string>
    <string name="add_your_full_name_so_your_friend_know_it_s_you">Add your full name so your friend know it\'s you</string>
    <string name="edit_name">Edit Name</string>
    <string name="find_more">Find More</string>
    <string name="find_people_to_follow">Find People to follow</string>
    <string name="follow_people_and_interests_you_care_about">Follow people and interests you care about</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="switch_to_professional_account">Switch to Professional Account</string>
    <string name="profile_information">Profile Information</string>
    <string name="type_here">Type here ...</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="save_path">save path : %s</string>

    <string name="iamutkarshtiwari_github_io_ananas_loading">Loading…</string>
    <string name="permission_necessary">Allow Permission</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Please allow to access the device gallery.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">more</string>
    <string name="read_less"> less</string>
    <string name="discover_people">Discover People</string>
    <string name="new_suggestions">New Suggestions</string>
    <string name="all_suggestions">All Suggestions</string>
    <string name="follow">Follow</string>
    <string name="remove">Remove</string>
    <string name="unfollow">Unfollow</string>
    <string name="file_limit_size_upload_format">Files must be less than %sMB</string>
</resources>