<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="EditProfile"
            type="com.ozonetech.ozogram.viewmodel.EditProfileViewModel" />

        <variable
            name="handlers"
            type="com.ozonetech.ozogram.view.activity.AddProfileActivity.MyClickHandlers" />
    </data>

    <LinearLayout
        android:id="@+id/ll_add_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_image"
        tools:context=".view.activity.AddProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp50"
            android:layout_marginBottom="@dimen/dp50"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_addBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:background="@drawable/greybox"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="@dimen/dp50"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:onClick="@{handlers::onCancelClick}"
                        android:background="@drawable/cancel_icon" />

                    <com.ozonetech.ozogram.customeview.TypeTextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp30"
                        android:layout_marginLeft="@dimen/dp30"
                        android:gravity="start|center"
                        android:text="Add Bio"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        app:custom_font="@string/app_font_bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:padding="@dimen/dp10"
                        android:layout_marginRight="@dimen/dp50"
                        android:layout_gravity="center"
                        android:onClick="@{handlers::onAcceptAddBioClick}"
                        android:background="@drawable/accept_icon" />


                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_bio"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/dp10"
                    android:layout_height="wrap_content">

                    <com.ozonetech.ozogram.customeview.TypeEditTextView
                        android:id="@+id/input_addBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/type_here"
                        android:inputType="text"
                        android:text="@={EditProfile.bio}"
                        android:singleLine="false"
                        android:maxLines="10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorHint"
                        android:textSize="@dimen/sp14"
                        app:custom_font="@string/app_font_bold" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:background="@drawable/greybox"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="@dimen/dp50"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:onClick="@{handlers::onCancelClick}"
                        android:background="@drawable/cancel_icon" />

                    <com.ozonetech.ozogram.customeview.TypeTextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp30"
                        android:layout_marginLeft="@dimen/dp30"
                        android:gravity="start|center"
                        android:text="@string/name"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        app:custom_font="@string/app_font_bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:padding="@dimen/dp10"
                        android:layout_marginRight="@dimen/dp50"
                        android:layout_gravity="center"
                        android:onClick="@{handlers::onAcceptEditNameClick}"
                        android:background="@drawable/accept_icon" />


                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_editName"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/dp10"
                    android:layout_height="wrap_content">

                    <com.ozonetech.ozogram.customeview.TypeEditTextView
                        android:id="@+id/input_editName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:text="@={EditProfile.fullName}"
                        android:singleLine="false"
                        android:maxLines="10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorHint"
                        android:textSize="@dimen/sp14"
                        app:custom_font="@string/app_font_bold" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>




        </LinearLayout>

    </LinearLayout>
</layout>
